--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,5 @@
-set -g default-terminal "screen-256color-bce"
+set -sg escape-time 10
+# only this line might not be enough
+set -g default-terminal "xterm-256color"
+# Needs this line also to overrides the default color
+set-option -ga terminal-overrides ",xterm-256color:Tc"
