--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,3 +3,4 @@ set -sg escape-time 10
 set -g default-terminal "xterm-256color"
 # Needs this line also to overrides the default color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g history-limit 3000
